common_base_util: common_base_ui  : fido_asm        : PS              : KingKongView待完善

--- a/app/src/main/res/layout/ac_custom_view.xml
+++ b/app/src/main/res/layout/ac_custom_view.xml
@@ -40,14 +40,17 @@
 
             <LinearLayout
                 android:layout_width="0dp"
+                android:orientation="vertical"
                 android:layout_height="wrap_content"
                 android:layout_weight="1">
 
                 <Button
                     android:id="@+id/bt_testBannerVp"
                     android:text="仿淘宝金刚区测试"
+                    android:textSize="12sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"/>
+
 
             </LinearLayout>
 
