--- a/app/src/main/res/layout/ac_fake_taobao.xml
+++ b/app/src/main/res/layout/ac_fake_taobao.xml
@@ -13,13 +13,35 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/mRv"
+        <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:itemCount="2"
-            android:background="@color/colorAccent"
-            tools:listitem="@layout/item_kingkong_test"/>
+            android:autoLink="web"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:text="KingKongView From\nhttps://gitee.com/htgogo/KingKongView"/>
+
+        <com.fido.kingkongview.KingKongView
+            android:id="@+id/kkView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_rv"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="0dp"
+            app:cardUseCompatPadding="false"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/mRv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:itemCount="2"
+                android:background="@color/colorAccent"
+                tools:listitem="@layout/item_kingkong_test"/>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:layout_width="match_parent"
@@ -51,6 +73,14 @@
             android:textStyle="bold"
             android:gravity="center"
             android:text="第二个跟屁虫"/>
+
+        <TextView
+            android:id="@+id/tv_gradientColor"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:text="测试渐变色动画效果"/>
 
         <!--<androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
