common_base_util: common_base_ui  : 新增仿咸鱼 DragLookMoreContainer.kt fido_asm        : PS              :

--- a/app/src/main/res/layout/ac_custom_view.xml
+++ b/app/src/main/res/layout/ac_custom_view.xml
@@ -9,6 +9,22 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <Button
+            android:id="@+id/bt_my_custom"
+            android:text="看看我的成果"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:id="@+id/bt_sliding_conflict"
+            android:text="滑动冲突解决测试"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
